# mmred

./: .gitignore  CLAUDE.md  README.md  copy_mask.sh  inference.sh  inference_gemini.sh  inference_openai.sh  lmdeploy_inference.ipynb  load_coyo.sh  predictions.ipynb  pyproject.toml  run_custom_dataset_benchmark.sh  run_question_split_benchmark.sh  run_sequence_bundle_benchmark.sh  test.sh  train.sh  train_grpo.sh  train_rmt.sh  train_sft.sh  train_sft_mamba.sh  vllm_servers.sh
grpo_trainer_lora_model/: adapter_config.json
mmred/: README.md  __init__.py  config.py  data_model.py  in_context.py  localization.py
modeling_rmt/: language_modeling.py
notebooks/: gemini_batch.ipynb  openai_batch.ipynb  playground.ipynb  predictions.ipynb  prepare_hf.ipynb
scripts/: __init__.py  analyze_results.py  convert_hf_to_json_format.py  eval_claude_cli.py  eval_rmt.py  generate_bundle_dataset.py  generate_dataset.py  generate_mera_dataset.py  openai_server_inference.py  patch_hf_dataset.py  plot_context_density.py  prepare_questions.py  prepare_questions_legacy.py  render_images.py  rescore_run.py  run_all_evals.sh  run_inference_ru.py  run_mera_eval.sh  run_mera_mlflow.py  simulate-babi.py  simulate-babi_legacy.py  upload_hf_dataset.py  upload_ru_to_hf.py  validate_eval_run.py
train/: config.yaml  config_eval_rmt.yaml  config_grpo.yaml  config_grpo_1_5b.yaml  config_grpo_3b_after_sft.yaml  config_grpo_7b_base.yaml  config_grpo_7b_r1.yaml  config_rmt.yaml  config_sft.yaml  config_sft_mamba.yaml  debug_rmt.py  deepspeed.yaml  ds_1.yaml  forward_eval_rmt.py  fsdp.yaml  fsdp2.yaml  (+12 more)
(+349 files in other folders)
