[project]
name = "mmred"
version = "0.0.1"
description = "A small utility package to create and work with the MMReD benchmark content."
authors = [
    { name = "Maxim Kurkin", email = "maximbider@gmail.com" },
    { name = "Boris Shirokikh", email = "bg.dustpelt@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]
inference = [
    "openai",
    "httpx[socks]",
    "pydantic",
    "tqdm",
    "Pillow",
]
serving = [
    "vllm>=0.8",
]
viz = [
    "matplotlib",
]
all = [
    "mmred[inference,serving,viz]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mmred"]
